<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_weight"
        android:inputType="number"/>
    <EditText
        android:id="@+id/etHeightFt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_height_in_feet"
        android:inputType="number"/>
    <EditText
        android:id="@+id/etHeightIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_height_in_inch"
        android:inputType="number"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMBI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculate_bmi"/>
    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/result"
        android:layout_marginTop="24dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>